[update]「お問い合わせ_送信完了」ページレスポンシブ完了(タブレット)

--- a/contact_complete.html
+++ b/contact_complete.html
@@ -111,9 +111,9 @@
 					<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a>永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="event.html">年間行事</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="grave.html">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="traffic.html">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
 				</ol><!-- /.footer-inner-menu-list -->
 			</div><!-- /.footer-inner-menu -->
@@ -133,9 +133,9 @@
 				<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">年間行事</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a>永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="event.html">年間行事</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="grave.html">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="traffic.html">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
 			</ol><!-- /.footer-inner-menu-list -->
 			<div class="footer-inner-logo"><img class="footer-inner-logo-image" src="assets/images/footer-logo.png"></div><!-- /.footer-inner-logo -->
