[update]「お問い合わせ_送信完了」ページレスポンシブ完了(スマホ版)

--- a/contact_complete.html
+++ b/contact_complete.html
@@ -91,8 +91,23 @@
 
 							もしメールが届かない場合は、お手数ではございますが、<br>
 							再度フォームよりお問い合わせいただくか、<br>
-							お電話にてお問い合わせください。<br>
+							お電話にてお問い合わせください。
 						</p><!-- /.main-about-contact-text -->
+						<p class="main-about-contact-text-mobile">
+							ご入力内容の確認メールをご入力いただいたメールアドレス宛に送信しました。<br><br>
+
+							確認メールがご自身の<br>
+							メールアドレスに届いていない場合、<br>
+							ご入力頂いたメールアドレスが誤っているか、<br>
+							確認メールが迷惑メールとして<br>
+							扱われている可能性がありますので、<br>
+							再度ご確認ください。<br><br>
+
+							もしメールが届かない場合は、<br>
+							お手数ではございますが、<br>
+							再度フォームよりお問い合わせいただくか、<br>
+							お電話にてお問い合わせください。
+						</p><!-- /.main-about-contact-text-mobile -->
 					</div><!-- /.main-about-contents -->
 				</div><!-- /.main-about -->
 			</div><!-- /.main-contents -->
