[update]「年間行事」ページ画像の差し替え完了(PC版) [fix]タイトルのテキスト間違いを修正

--- a/event.html
+++ b/event.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>十年寺 - 年間行事</title>
+	<title>十念寺 - 年間行事</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Zen+Old+Mincho:wght@400;500;600;700;900&display=swap" rel="stylesheet">
@@ -134,23 +134,23 @@
 					<h2 class="main-event-slider-title main-event-slider-title-tablet">庚申さんと蒟蒻について</h2><!-- /.main-event-slider-title -->
 					<div class="main-event-slider-for">
 						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/1.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/2.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/3.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/4.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/5.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/6.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/7.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-for-item"><img src="assets/images/event_slider/8.png"></div><!-- /.main-event-slider-for-item -->
 					</div><!-- /.main-event-slider-for -->
 					<div class="main-event-slider-nav">
 						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/1.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
-						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/test.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/2.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/3.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/4.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/5.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/6.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/7.png"></div><!-- /.main-event-slider-for-item -->
+						<div class="main-event-slider-nav-item"><img src="assets/images/event_slider/8.png"></div><!-- /.main-event-slider-for-item -->
 					</div><!-- /.main-event-slider-nav -->
 					<div class="main-event-slider-tablet">
 						<div class="main-event-slider-tablet-item"><img src="assets/images/event_slider/1.png"></div><!-- /.main-event-slider-for-item -->
