[update]「十念寺について」レスポンシブ完了(タブレット版)

--- a/about.html
+++ b/about.html
@@ -97,10 +97,14 @@
 						<img class="main-about-right" src="assets/images/about-right.png">
 					</div><!-- /.main-about-img -->
 					<div class="main-about-contents">
-						<h2 class="main-about-contents-title main-about-contents-title-memorial">法要</h2><!-- /.main-about-contents-title -->
-						<p class="main-about-contents-text main-about-contents-text-memorial">故人を偲びながら供養する仏教の儀式です<br>
-							自身の命の尊さに深く思い馳せつつも<br>故人が極楽浄土へ往生するための<br>
-							大切な行事です</p><!-- /.main-about-contents-text -->
+						<h2 class="main-about-contents-title main-about-contents-title-memorial">私たちの信条</h2><!-- /.main-about-contents-title -->
+						<p class="main-about-contents-text main-about-contents-text-memorial">
+							私たちは　阿弥陀さまに帰依し<br>
+							そのお慈悲を深く信じ<br>
+							悦びのお念仏を称えます<br>
+							私たちは　佛さまのみ教えを<br>
+							くらしの中に生かし<br>
+							人々と和合し　社会に貢献します</p><!-- /.main-about-contents-text -->
 					</div><!-- /.main-about-contents -->
 				</div><!-- /.main-about-tablet --> 
 			</div><!-- /.main-contents -->
@@ -137,6 +141,27 @@
 						</div><!-- /.main-treasure-item main-treasure-item-top -->
 					</div><!-- /.main-treasure-list -->
 				</div><!-- /.main-treasure -->
+				<main class="main-treasure-tablet">
+					<h2 class="main-treasure-title">御本尊や寺宝について</h2><!-- /.main-treasure-title -->
+					<div class="main-treasure-tablet-list">
+						<div class="main-treasure-tablet-item">
+							<img class="main-treasure-tablet-item-image" src="assets/images/junenji_amidanyoraizazou_gousei.png">
+							<h3 class="main-treasure-tablet-item-title">ご本尊　阿弥陀如来坐像</h3>
+							<p class="main-treasure-tablet-item-text">ご本尊は平安後期の仏師定朝(じょうちょう)様式の流れを汲む　穏やかで優しい表情の阿弥陀如来坐像です。先ずはご本尊の穏やかで優しい表情のお顔に、心洗われる筈です。次に、座す蓮華座の丁寧な作りに目が奪われるでしょう。刈谷市指定文化財</p>
+						</div><!-- /.main-treasure-tablet-item -->
+						<div class="main-treasure-tablet-item">
+							<img class="main-treasure-tablet-item-image" src="assets/images/junenji_syoumenkongou_tablet.png">
+							<h3 class="main-treasure-tablet-item-title">青面金剛尊天</h3>
+							<p class="main-treasure-tablet-item-text">悪鬼の禍を除くと云われ、帝釈天の使者として崇められており、現在は毎年12月第一日曜日に庚申尊天のご祈祷大祭を本堂内で行っております。昔は三猿の屋根瓦が残る庚申堂で行っておりました。当山山門の脇に盛んな頃の庚申塔もございます。</p>
+						</div><!-- /.main-treasure-tablet-item -->
+						<div class="main-treasure-tablet-item">
+							<img class="main-treasure-tablet-item-image" src="assets/images/junenji_juichimen_tablet.png">
+							<h3 class="main-treasure-tablet-item-title">十一面観世音菩薩立像</h3>
+							<p class="main-treasure-tablet-item-text">江戸期刈谷藩８代目（６家目）の阿部伊予守正春から寄進された像です。刈谷市指定文化財。</p>
+						</div><!-- /.main-treasure-tablet-item -->
+					</div><!-- /.main-treasure-tablet-list -->
+				</main><!-- /.main-treasure-tablet -->
+				<div class="main-about-border"></div><!-- /.main-about-border -->
 				<div class="main-facility">
 					<h2 class="main-facility-title">各施設について</h2><!-- /.main-facility-title -->
 					<div class="main-facility-list">
@@ -198,6 +223,60 @@
 						</div><!-- /.main-facility-item -->
 					</div><!-- /.main-facility-list -->
 				</div><!-- /.main-facility -->
+				<div class="main-facility-tablet">
+					<h2 class="main-facility-title">各施設について</h2><!-- /.main-facility-title -->
+					<div class="main-facility-tablet-list">
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_hondo_tablet.png">
+							<h3 class="main-facility-tablet-item-title">本堂</h3>
+							<p class="main-facility-tablet-item-text">御本尊は「阿弥陀如来坐像」延享年間(1744〜1748年)に建立された総欅造りの本堂の奥に「半伽趺坐阿弥陀如来」、右手には庚申大祭時にご祈祷する「青面金剛尊天」があり、その横には「十一面観世音菩薩立像」左手奥には土井家ゆかりの「利勝寺」。</p>
+							<a class="main-facility-tablet-item-link">庚申大祭について→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_risyoji_tablet.png">
+							<h3 class="main-facility-tablet-item-title">利勝寺</h3>
+							<p class="main-facility-tablet-item-text">刈谷藩主 土井家のお寺です。このお寺は十念寺の内部にあり「お寺の中にお寺がある」と言う、珍しい作りになっております。御本尊は「阿弥陀如来立像」。その他、代々続くお位牌などが収められております。</p>
+							<a class="main-facility-tablet-item-link">土井家について→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_doikebyousyo_tablet.png">
+							<h3 class="main-facility-tablet-item-title">土井家 廟所</h3>
+							<p class="main-facility-tablet-item-text">江戸期刈谷藩１４代目（９家目）から２２代目で明治維新を迎えるまでの１２４年５ヶ月間刈谷を治めた、土井家ゆかりの墓所です。普段は防犯のため施錠しております。</p>
+							<a class="main-facility-tablet-item-link">土井家について→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_matsumotokeidounohaka_tablet.png">
+							<h3 class="main-facility-tablet-item-title">松本奎堂と三家老の墓</h3>
+							<p class="main-facility-tablet-item-text">明治維新の魁「天誅組」の総裁を務めた松本奎堂のお墓と、動乱の幕末時に起こった悲運供養の三家老のお墓です。</p>
+							<a class="main-facility-tablet-item-link">松本奎堂や三家老について→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_eidaikuyou_tablet.png">
+							<h3 class="main-facility-tablet-item-title">永代供養墓・共同墓地</h3>
+							<p class="main-facility-tablet-item-text">父と母のお陰でこの世に生を受け、両親の愛情と天地の恵みを受けて、成長してきた私たちです。お墓の事でお悩みの方はまずはご相談ください。</p>
+							<a class="main-facility-tablet-item-link">永代供養墓・共同墓地について→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_kobodo_tablet.png">
+							<h3 class="main-facility-tablet-item-title">弘法堂</h3>
+							<p class="main-facility-tablet-item-text">(旧)三河新四国霊場の第五十三番。敷地内北側を正面に弘法大師像を祀る弘法堂があります。</p>
+							<a class="main-facility-tablet-item-link">弘法堂について→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_nishimon_tablet.png">
+							<h3 class="main-facility-tablet-item-title">山門(西門)</h3>
+							<p class="main-facility-tablet-item-text">正面左手には庚申塔が残る、十念寺の入り口です。山門より西側には駐車場がございます。お車でお越しの際はご利用ください。</p>
+							<a class="main-facility-tablet-item-link">交通のご案内→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_syorodo_tablet.png">
+							<h3 class="main-facility-tablet-item-title">鐘楼堂</h3>
+							<p class="main-facility-tablet-item-text">山門より南に鐘楼堂があります。大晦日には除夜の鐘を突いております。ご参拝時に突いて頂く事も可能です。</p>
+							<a class="main-facility-tablet-item-link">交通のご案内→</a>
+						</div><!-- /.main-facility-tablet-item -->
+
+					</div><!-- /.main-facility-tablet-list -->
+				</div><!-- /.main-facility-tablet -->
 			</div><!-- /.main-contents -->	
 		</div><!-- /.main-bg3 -->
 	</main>
