[update]「十念寺について」レスポンシブ完了。リンクは全てつけてない。(スマホ版)

--- a/about.html
+++ b/about.html
@@ -251,6 +251,12 @@
 							<a class="main-facility-tablet-item-link">松本奎堂や三家老について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
+							<img class="main-facility-tablet-item-image" src="assets/images/junenji_nakajimasyukyo_tablet.png">
+							<h3 class="main-facility-tablet-item-title">俳人 中島秋挙の墓</h3>
+							<p class="main-facility-tablet-item-text">市原の渡し場の賑わいを伝える「夜わたしの今に声あり華さかり」等を詠んだ俳人中島秋挙（刈谷藩士中島左守の長男）のお墓です。</p>
+							<a class="main-facility-tablet-item-link">俳人 中島秋挙について→</a>
+						</div><!-- /.main-facility-tablet-item -->
+						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_eidaikuyou_tablet.png">
 							<h3 class="main-facility-tablet-item-title">永代供養墓・共同墓地</h3>
 							<p class="main-facility-tablet-item-text">父と母のお陰でこの世に生を受け、両親の愛情と天地の恵みを受けて、成長してきた私たちです。お墓の事でお悩みの方はまずはご相談ください。</p>
