[update]完成！(だいぶ昔にできていたけど、プッシュするの忘れていたので今プッシュ)

--- a/event.html
+++ b/event.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="assets/libs/slick-theme.css">
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="icon" href="assets/images/juunenji_favicon.ico">
 </head>
 <body>
 	<header class="header">
@@ -23,20 +24,20 @@
 				<div class="header-inner-right-menu">
 					<nav class="header-inner-right-menu-normal">
 						<ol class="header-inner-right-menu-normal-list">
-							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺について</a></li>
-							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺のご案内</a></li>
+							<li class="header-inner-right-menu-normal-item"><a href="about.html">十念寺について</a></li>
+							<li class="header-inner-right-menu-normal-item"><a href="guide.html">十念寺のご案内</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="memorial-service.html">法要</a></li>
 							<li class="header-inner-right-menu-normal-item"><a>年間行事</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="grave.html">永代供養墓地</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="traffic.html">交通のご案内</a></li>
 						</ol><!-- /.header-inner-right-menu-list -->
 					</nav><!-- /.header-inner-right-menu-normal -->
-					<button class="header-inner-right-menu-contact">お問い合わせ</button>
+					<button class="header-inner-right-menu-contact" onclick="location.href='contact.php'">お問い合わせ</button>
 				</div><!-- /.header-inner-right-menu -->
 			</div><!-- /.header-inner-right -->
 			<div class="header-inner-right-mb">
-				<a href="tel:0000000000" class="header-inner-right-mb-button button-header-tel"><img src="assets/images/tel.png">お電話</a><!-- /.header-inner-right-mb-tel -->
-				<a href="#" class="header-inner-right-mb-button button-header-access"><img src="assets/images/mappin.png">アクセス</a><!-- /.header-inner-right-mb-button -->
+				<a href="tel:0566210854" class="header-inner-right-mb-button button-header-tel"><img src="assets/images/tel.png">お電話</a><!-- /.header-inner-right-mb-tel -->
+				<a href="traffic.html" class="header-inner-right-mb-button button-header-access"><img src="assets/images/mappin.png">アクセス</a><!-- /.header-inner-right-mb-button -->
 				<!-- ハンバーガーメニュー参考サイト：https://hakenblog.com/hamburger-menu/、https://codepen.io/sakuragraphica/pen/PozLPBg、https://syncer.jp/jquery-modal-window -->
 				<a class="header-inner-right-mb-button button-header-hamburger">
 					<div class="header-inner-right-mb-hamburger-icon">
@@ -59,13 +60,13 @@
 				<img class="header-inner-right-mb-menu-list-logo" src="assets/images/junenji_logo_white.png">
 				<ol class="header-inner-right-mb-menu-list">
 					<li class="header-inner-right-mb-menu-item"><a href="index.html">トップページ</a></li>
-					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺について</a></li>
-					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺のご案内</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="about.html">十念寺について</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="guide.html">十念寺のご案内</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="memorial-service.html">法要</a></li>
 					<li class="header-inner-right-mb-menu-item"><a>年間行事</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="grave.html">永代供養墓地</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="traffic.html">交通のご案内</a></li>
-					<li class="header-inner-right-mb-menu-item"><a href="#">お問い合わせ</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="contact.php">お問い合わせ</a></li>
 				</ol><!-- /.header-inner-right-mb-menu-list -->
 			</nav><!-- /.header-inner-right-mb-menu-list-outer -->
 		</div><!-- /.header-inner -->
@@ -180,18 +181,18 @@
 			<div class="footer-inner-menu">
 				<ol class="footer-inner-menu-list">
 					<li class="footer-inner-menu-item"><a href="index.html">トップページ</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="about.html">十念寺について</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="guide.html">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a>年間行事</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="grave.html">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="traffic.html">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="contact.php">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
 				</ol><!-- /.footer-inner-menu-list -->
 			</div><!-- /.footer-inner-menu -->
 			<div class="footer-inner-sns">
 				<div class="footer-inner-sns-list">
-					<div class="footer-inner-sns-line"><a href="#"><img src="assets/images/line-icon.png"></a></div><!-- /.footer-inner-sns-line -->
+					<div class="footer-inner-sns-line"><a href="https://s.lmes.jp/landing-qr/1657796689-qP12wvKj?uLand=5Qvb5j"><img src="assets/images/line-icon.png"></a></div><!-- /.footer-inner-sns-line -->
 					<div class="footer-inner-sns-youtube"><a href="https://www.youtube.com/@user-yi7vt4pb1c" target="_black"><img src="assets/images/youtube-icon.png"></a></div><!-- /.footer-inner-sns-youtube -->	
 				</div><!-- /.footer-inner-sns-list -->
 			</div><!-- /.footer-inner-sns -->
@@ -202,13 +203,13 @@
 		<div class="footer-inner-tablet">
 			<ol class="footer-inner-menu-list">
 				<li class="footer-inner-menu-item"><a href="index.html">トップページ</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">十念寺について</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="about.html">十念寺について</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="guide.html">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a>年間行事</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="grave.html">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="traffic.html">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="contact.php">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
 			</ol><!-- /.footer-inner-menu-list -->
 			<div class="footer-inner-logo"><img class="footer-inner-logo-image" src="assets/images/footer-logo.png"></div><!-- /.footer-inner-logo -->
 			<address class="footer-inner-address">
@@ -226,6 +227,7 @@
 			</div><!-- /.footer-inner-copyright -->
 		</div><!-- /.footer-inner-tablet -->
 	</footer>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js?ver=4.9.1"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/libs/jquery.mb.YTPlayer.min.js"></script>
 	<script type="text/javascript" src="assets/libs/slick.min.js"></script>
