--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="assets/libs/slick-theme.css">
 	<link rel="stylesheet" href="assets/css/reset.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="icon" href="assets/images/juunenji_favicon.ico">
 </head>
 <body>
 	<header class="header">
@@ -24,19 +25,19 @@
 					<nav class="header-inner-right-menu-normal">
 						<ol class="header-inner-right-menu-normal-list">
 							<li class="header-inner-right-menu-normal-item"><a>十念寺について</a></li>
-							<li class="header-inner-right-menu-normal-item"><a href="#">十念寺のご案内</a></li>
+							<li class="header-inner-right-menu-normal-item"><a href="guide.html">十念寺のご案内</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="memorial-service.html">法要</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="event.html">年間行事</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="grave.html">永代供養墓地</a></li>
 							<li class="header-inner-right-menu-normal-item"><a href="traffic.html">交通のご案内</a></li>
 						</ol><!-- /.header-inner-right-menu-list -->
 					</nav><!-- /.header-inner-right-menu-normal -->
-					<button class="header-inner-right-menu-contact">お問い合わせ</button>
+					<button class="header-inner-right-menu-contact" onclick="location.href='contact.php'">お問い合わせ</button>
 				</div><!-- /.header-inner-right-menu -->
 			</div><!-- /.header-inner-right -->
 			<div class="header-inner-right-mb">
-				<a href="tel:0000000000" class="header-inner-right-mb-button button-header-tel"><img src="assets/images/tel.png">お電話</a><!-- /.header-inner-right-mb-tel -->
-				<a href="#" class="header-inner-right-mb-button button-header-access"><img src="assets/images/mappin.png">アクセス</a><!-- /.header-inner-right-mb-button -->
+				<a href="tel:0566210854" class="header-inner-right-mb-button button-header-tel"><img src="assets/images/tel.png">お電話</a><!-- /.header-inner-right-mb-tel -->
+				<a href="traffic.html" class="header-inner-right-mb-button button-header-access"><img src="assets/images/mappin.png">アクセス</a><!-- /.header-inner-right-mb-button -->
 				<!-- ハンバーガーメニュー参考サイト：https://hakenblog.com/hamburger-menu/、https://codepen.io/sakuragraphica/pen/PozLPBg、https://syncer.jp/jquery-modal-window -->
 				<a class="header-inner-right-mb-button button-header-hamburger">
 					<div class="header-inner-right-mb-hamburger-icon">
@@ -60,12 +61,12 @@
 				<ol class="header-inner-right-mb-menu-list">
 					<li class="header-inner-right-mb-menu-item"><a href="index.html">トップページ</a></li>
 					<li class="header-inner-right-mb-menu-item"><a>十念寺について</a></li>
-					<li class="header-inner-right-mb-menu-item"><a href="#">十念寺のご案内</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="guide.html">十念寺のご案内</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="memorial-service.html">法要</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="event.html">年間行事</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="grave.html">永代供養墓地</a></li>
 					<li class="header-inner-right-mb-menu-item"><a href="traffic.html">交通のご案内</a></li>
-					<li class="header-inner-right-mb-menu-item"><a href="#">お問い合わせ</a></li>
+					<li class="header-inner-right-mb-menu-item"><a href="contact.php">お問い合わせ</a></li>
 				</ol><!-- /.header-inner-right-mb-menu-list -->
 			</nav><!-- /.header-inner-right-mb-menu-list-outer -->
 		</div><!-- /.header-inner -->
@@ -169,7 +170,7 @@
 							<img class="main-facility-item-image-top" src="assets/images/junenji_hondo.png">
 							<h3 class="main-facility-item-title">本堂</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text">御本尊は「阿弥陀如来坐像」延享年間(1744〜1748年)に建立された総欅造りの本堂の奥に「半伽趺坐阿弥陀如来」、右手には庚申大祭時にご祈祷する「青面金剛尊天」があり、その横には「十一面観世音菩薩立像」左手奥には土井家ゆかりの「利勝寺」。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-top" href="#">庚申大祭について→</a>
+							<a class="main-facility-item-link main-facility-item-link-top" href="event.html">庚申大祭について→</a>
 						</div><!-- /.main-facility-item -->
 					</div><!-- /.main-facility-list -->
 					<div class="main-facility-list">
@@ -177,49 +178,49 @@
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_risyoji.png">
 							<h3 class="main-facility-item-title">利勝寺</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">刈谷藩主 土井家のお寺です。このお寺は十念寺の内部にあり「お寺の中にお寺がある」と言う、珍しい作りになっております。御本尊は「阿弥陀如来立像」。その他、代々続くお位牌などが収められております。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">土井家について→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="guide.html">土井家について→</a>
 						</div><!-- /.main-facility-item -->
 						<div class="main-facility-item main-facility-item-bottom">
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_doikebyousyo.png">
 							<h3 class="main-facility-item-title">土井家 廟所</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">江戸期刈谷藩１４代目（９家目）から２２代目で明治維新を迎えるまでの１２４年５ヶ月間刈谷を治めた、土井家ゆかりの墓所です。普段は防犯のため施錠しております。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">土井家について→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="guide.html">土井家について→</a>
 						</div><!-- /.main-facility-item -->
 						<div class="main-facility-item main-facility-item-bottom">
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_matsumotokeidounohaka.png">
 							<h3 class="main-facility-item-title">松本奎堂と三家老の墓</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">明治維新の魁「天誅組」の総裁を務めた松本奎堂のお墓と、動乱の幕末時に起こった悲運供養の三家老のお墓です。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">松本奎堂や三家老について→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="guide.html">松本奎堂や三家老について→</a>
 						</div><!-- /.main-facility-item -->
 						<div class="main-facility-item main-facility-item-bottom">
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_nakajimasyukyo.png">
 							<h3 class="main-facility-item-title">俳人 中島秋挙の墓</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">市原の渡し場の賑わいを伝える「夜わたしの今に声あり華さかり」等を詠んだ俳人中島秋挙（刈谷藩士中島左守の長男）のお墓です。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">俳人 中島秋挙について→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="guide.html">俳人 中島秋挙について→</a>
 						</div><!-- /.main-facility-item -->
 						<div class="main-facility-item main-facility-item-bottom">
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_eidaikuyou.png">
 							<h3 class="main-facility-item-title">永代供養墓・共同墓地</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">父と母のお陰でこの世に生を受け、両親の愛情と天地の恵みを受けて、成長してきた私たちです。お墓の事でお悩みの方はまずはご相談ください。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">永代供養墓・共同墓地について→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="grave.html">永代供養墓・共同墓地について→</a>
 						</div><!-- /.main-facility-item -->
 						<div class="main-facility-item main-facility-item-bottom">
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_kobodo.png">
 							<h3 class="main-facility-item-title">弘法堂</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">(旧)三河新四国霊場の第五十三番。敷地内北側を正面に弘法大師像を祀る弘法堂があります。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">弘法堂について→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="guide.html">弘法堂について→</a>
 						</div><!-- /.main-facility-item -->
 						<div class="main-facility-item main-facility-item-bottom">
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_nishimon.png">
 							<h3 class="main-facility-item-title">山門(西門)</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">正面左手には庚申塔が残る、十念寺の入り口です。山門より西側には駐車場がございます。お車でお越しの際はご利用ください。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">交通のご案内→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="traffic.html">交通のご案内→</a>
 						</div><!-- /.main-facility-item -->
 						<div class="main-facility-item main-facility-item-bottom">
 							<img class="main-facility-item-image-bottom" src="assets/images/junenji_syorodo.png">
 							<h3 class="main-facility-item-title">鐘楼堂</h3><!-- /.main-facility-item-title -->
 							<p class="main-facility-item-text main-facility-item-text-bottom">山門より南に鐘楼堂があります。大晦日には除夜の鐘を突いております。ご参拝時に突いて頂く事も可能です。</p><!-- /.main-facility-item-text -->
-							<a class="main-facility-item-link main-facility-item-link-bottom" href="#">交通のご案内→</a>
+							<a class="main-facility-item-link main-facility-item-link-bottom" href="traffic.html">交通のご案内→</a>
 						</div><!-- /.main-facility-item -->
 					</div><!-- /.main-facility-list -->
 				</div><!-- /.main-facility -->
@@ -230,55 +231,55 @@
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_hondo_tablet.png">
 							<h3 class="main-facility-tablet-item-title">本堂</h3>
 							<p class="main-facility-tablet-item-text">御本尊は「阿弥陀如来坐像」延享年間(1744〜1748年)に建立された総欅造りの本堂の奥に「半伽趺坐阿弥陀如来」、右手には庚申大祭時にご祈祷する「青面金剛尊天」があり、その横には「十一面観世音菩薩立像」左手奥には土井家ゆかりの「利勝寺」。</p>
-							<a class="main-facility-tablet-item-link">庚申大祭について→</a>
+							<a class="main-facility-tablet-item-link" href="event.html">庚申大祭について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_risyoji_tablet.png">
 							<h3 class="main-facility-tablet-item-title">利勝寺</h3>
 							<p class="main-facility-tablet-item-text">刈谷藩主 土井家のお寺です。このお寺は十念寺の内部にあり「お寺の中にお寺がある」と言う、珍しい作りになっております。御本尊は「阿弥陀如来立像」。その他、代々続くお位牌などが収められております。</p>
-							<a class="main-facility-tablet-item-link">土井家について→</a>
+							<a class="main-facility-tablet-item-link" href="guide.html">土井家について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_doikebyousyo_tablet.png">
 							<h3 class="main-facility-tablet-item-title">土井家 廟所</h3>
 							<p class="main-facility-tablet-item-text">江戸期刈谷藩１４代目（９家目）から２２代目で明治維新を迎えるまでの１２４年５ヶ月間刈谷を治めた、土井家ゆかりの墓所です。普段は防犯のため施錠しております。</p>
-							<a class="main-facility-tablet-item-link">土井家について→</a>
+							<a class="main-facility-tablet-item-link" href="guide.html">土井家について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_matsumotokeidounohaka_tablet.png">
 							<h3 class="main-facility-tablet-item-title">松本奎堂と三家老の墓</h3>
 							<p class="main-facility-tablet-item-text">明治維新の魁「天誅組」の総裁を務めた松本奎堂のお墓と、動乱の幕末時に起こった悲運供養の三家老のお墓です。</p>
-							<a class="main-facility-tablet-item-link">松本奎堂や三家老について→</a>
+							<a class="main-facility-tablet-item-link" href="guide.html">松本奎堂や三家老について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_nakajimasyukyo_tablet.png">
 							<h3 class="main-facility-tablet-item-title">俳人 中島秋挙の墓</h3>
 							<p class="main-facility-tablet-item-text">市原の渡し場の賑わいを伝える「夜わたしの今に声あり華さかり」等を詠んだ俳人中島秋挙（刈谷藩士中島左守の長男）のお墓です。</p>
-							<a class="main-facility-tablet-item-link">俳人 中島秋挙について→</a>
+							<a class="main-facility-tablet-item-link" href="guide.html">俳人 中島秋挙について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_eidaikuyou_tablet.png">
 							<h3 class="main-facility-tablet-item-title">永代供養墓・共同墓地</h3>
 							<p class="main-facility-tablet-item-text">父と母のお陰でこの世に生を受け、両親の愛情と天地の恵みを受けて、成長してきた私たちです。お墓の事でお悩みの方はまずはご相談ください。</p>
-							<a class="main-facility-tablet-item-link">永代供養墓・共同墓地について→</a>
+							<a class="main-facility-tablet-item-link" href="grave.html">永代供養墓・共同墓地について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_kobodo_tablet.png">
 							<h3 class="main-facility-tablet-item-title">弘法堂</h3>
 							<p class="main-facility-tablet-item-text">(旧)三河新四国霊場の第五十三番。敷地内北側を正面に弘法大師像を祀る弘法堂があります。</p>
-							<a class="main-facility-tablet-item-link">弘法堂について→</a>
+							<a class="main-facility-tablet-item-link" href="guide.html">弘法堂について→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_nishimon_tablet.png">
 							<h3 class="main-facility-tablet-item-title">山門(西門)</h3>
 							<p class="main-facility-tablet-item-text">正面左手には庚申塔が残る、十念寺の入り口です。山門より西側には駐車場がございます。お車でお越しの際はご利用ください。</p>
-							<a class="main-facility-tablet-item-link">交通のご案内→</a>
+							<a class="main-facility-tablet-item-link" href="traffic.html">交通のご案内→</a>
 						</div><!-- /.main-facility-tablet-item -->
 						<div class="main-facility-tablet-item">
 							<img class="main-facility-tablet-item-image" src="assets/images/junenji_syorodo_tablet.png">
 							<h3 class="main-facility-tablet-item-title">鐘楼堂</h3>
 							<p class="main-facility-tablet-item-text">山門より南に鐘楼堂があります。大晦日には除夜の鐘を突いております。ご参拝時に突いて頂く事も可能です。</p>
-							<a class="main-facility-tablet-item-link">交通のご案内→</a>
+							<a class="main-facility-tablet-item-link" href="traffic.html">交通のご案内→</a>
 						</div><!-- /.main-facility-tablet-item -->
 
 					</div><!-- /.main-facility-tablet-list -->
@@ -297,17 +298,17 @@
 				<ol class="footer-inner-menu-list">
 					<li class="footer-inner-menu-item"><a href="index.html">トップページ</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a>十念寺について</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="guide.html">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="event.html">年間行事</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="grave.html">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 					<li class="footer-inner-menu-item"><a href="traffic.html">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
-					<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
+					<li class="footer-inner-menu-item"><a href="contact.php">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
 				</ol><!-- /.footer-inner-menu-list -->
 			</div><!-- /.footer-inner-menu -->
 			<div class="footer-inner-sns">
 				<div class="footer-inner-sns-list">
-					<div class="footer-inner-sns-line"><a href="#"><img src="assets/images/line-icon.png"></a></div><!-- /.footer-inner-sns-line -->
+					<div class="footer-inner-sns-line"><a href="https://s.lmes.jp/landing-qr/1657796689-qP12wvKj?uLand=5Qvb5j"><img src="assets/images/line-icon.png"></a></div><!-- /.footer-inner-sns-line -->
 					<div class="footer-inner-sns-youtube"><a href="https://www.youtube.com/@user-yi7vt4pb1c" target="_black"><img src="assets/images/youtube-icon.png"></a></div><!-- /.footer-inner-sns-youtube -->	
 				</div><!-- /.footer-inner-sns-list -->
 			</div><!-- /.footer-inner-sns -->
@@ -319,12 +320,12 @@
 			<ol class="footer-inner-menu-list">
 				<li class="footer-inner-menu-item"><a href="index.html">トップページ</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a>十念寺について</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="guide.html">十念寺のご案内</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="memorial-service.html">法要</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="event.html">年間行事</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="grave.html">永代供養墓地</a></li><!-- /.footer-inner-menu-item -->
 				<li class="footer-inner-menu-item"><a href="traffic.html">交通のご案内</a></li><!-- /.footer-inner-menu-item -->
-				<li class="footer-inner-menu-item"><a href="#">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
+				<li class="footer-inner-menu-item"><a href="contact.php">お問い合わせ</a></li><!-- /.footer-inner-menu-item -->
 			</ol><!-- /.footer-inner-menu-list -->
 			<div class="footer-inner-logo"><img class="footer-inner-logo-image" src="assets/images/footer-logo.png"></div><!-- /.footer-inner-logo -->
 			<address class="footer-inner-address">
@@ -342,6 +343,7 @@
 			</div><!-- /.footer-inner-copyright -->
 		</div><!-- /.footer-inner-tablet -->
 	</footer>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js?ver=4.9.1"></script>
 	<script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="assets/libs/jquery.mb.YTPlayer.min.js"></script>
 	<script type="text/javascript" src="assets/libs/slick.min.js"></script>
